refactor: 검증 메서드들이 매개변수로 넘어온 값을 가지고 검증을 진행하도록 변경